Scrollbar issue in blog page resolved

--- a/css/desktop_9.css
+++ b/css/desktop_9.css
@@ -185,9 +185,6 @@ nav {
     border-radius: 80px; 
   }
   
-  /* Handle on hover */
-  ::-webkit-scrollbar-thumb:hover {
-    
    
 
 .blog_content {
